Buildbot crash output: randpkt-2010-12-25-25231.pcap
This issue was migrated from bug 5521 in our old bug tracker.
Original bug information:
Reporter: Buildbot Builder
Status: RESOLVED FIXED
Product: Wireshark
Component: TShark
OS: Ubuntu
Platform: x86-64
Version: unspecified
Attachments:
bug5521_1.patch: Some minimal sanity checking of reception claim count.
: Screen shot showing the new expert info error for non-sensical reception claim count.
bug5521_2.patch: Some minimal sanity checking of reception claim count.