Improve sanity checking of reception claim count.  Fixes bug 5521.

svn path=/trunk/; revision=35287